// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead renders Typeahead normal 1`] = `
<div
  className="box relative"
>
  <label
    className="label"
    htmlFor="Typeahead"
  >
    <div
      className="formLabel"
    >
      <div
        className="Text fontSize1 darkGray alignStart breakWord fontWeightNormal"
      >
        Typeahead Example
      </div>
    </div>
  </label>
  <div
    className="box itemsCenter relative xsDisplayFlex"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      aria-label="Typeahead Example"
      autoComplete="off"
      className="input inputActive inputRadius medium"
      id="Typeahead"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select a Label"
      type="text"
      value=""
    />
    <button
      className="icon"
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <div
        className="box circle itemsCenter justifyCenter left0 right0 xsDisplayFlex"
        style={
          Object {
            "height": 20,
            "width": 20,
          }
        }
      >
        <svg
          aria-hidden={true}
          aria-label=""
          className="icon darkGray iconBlock"
          height={10}
          role="img"
          viewBox="0 0 24 24"
          width={10}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Typeahead renders tags when supplied 1`] = `
<div
  className="box relative"
>
  <label
    className="label"
    htmlFor="test"
  >
    <div
      className="formLabel"
    >
      <div
        className="Text fontSize1 darkGray alignStart breakWord fontWeightNormal"
      >
        Tag Example
      </div>
    </div>
  </label>
  <div
    className="box itemsCenter relative xsDisplayFlex"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="input inputActive inputRadius medium inputWrapper"
    >
      <div
        className="box marginBottom1 marginEnd1"
      >
        <div
          aria-disabled={false}
          className="box lightGrayBg rounding2 xsDisplayInlineBlock"
          style={
            Object {
              "height": 32,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="Flex rowGap0 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd2 marginStart0"
            />
            <div
              className="truncate"
              title="a"
            >
              <span
                className="Text fontSize2 darkGray alignStart breakWord fontWeightNormal"
              >
                a
              </span>
            </div>
            <div
              className="box marginStart1"
            >
              <button
                className="button lightGray hideOutline tapTransition accessibilityOutline"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={null}
                  aria-label="Remove a tag"
                  className="icon darkGray iconBlock"
                  height={8}
                  role="img"
                  viewBox="0 0 24 24"
                  width={8}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box marginBottom1 marginEnd1"
      >
        <div
          aria-disabled={false}
          className="box lightGrayBg rounding2 xsDisplayInlineBlock"
          style={
            Object {
              "height": 32,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="Flex rowGap0 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd2 marginStart0"
            />
            <div
              className="truncate"
              title="b"
            >
              <span
                className="Text fontSize2 darkGray alignStart breakWord fontWeightNormal"
              >
                b
              </span>
            </div>
            <div
              className="box marginStart1"
            >
              <button
                className="button lightGray hideOutline tapTransition accessibilityOutline"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={null}
                  aria-label="Remove b tag"
                  className="icon darkGray iconBlock"
                  height={8}
                  role="img"
                  viewBox="0 0 24 24"
                  width={8}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box marginBottom1 marginEnd1"
      >
        <div
          aria-disabled={false}
          className="box lightGrayBg rounding2 xsDisplayInlineBlock"
          style={
            Object {
              "height": 32,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="Flex rowGap0 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd2 marginStart0"
            />
            <div
              className="truncate"
              title="c"
            >
              <span
                className="Text fontSize2 darkGray alignStart breakWord fontWeightNormal"
              >
                c
              </span>
            </div>
            <div
              className="box marginStart1"
            >
              <button
                className="button lightGray hideOutline tapTransition accessibilityOutline"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={null}
                  aria-label="Remove c tag"
                  className="icon darkGray iconBlock"
                  height={8}
                  role="img"
                  viewBox="0 0 24 24"
                  width={8}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box flexGrow marginEnd2 relative"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          aria-hidden={true}
          className="inputSpacer"
        >
          test
        </div>
        <input
          aria-label="Tag Example"
          autoComplete="off"
          className="unstyledInput"
          id="test"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="test"
        />
      </div>
      <button
        className="clear"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <div
          className="box circle itemsCenter justifyCenter left0 right0 xsDisplayFlex"
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon darkGray iconBlock"
            height={10}
            role="img"
            viewBox="0 0 24 24"
            width={10}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
